# sdl2-examples

./: .gitignore  .travis.yml  .travis.yml.backup  COMPILES.md  LICENSE  Makefile  README.md  WANTED.md  bench.sh  csv.sh  main.cpp  run.sh
.gear/: .sdl2-examples.spec.swp  rules  sdl2-examples.spec
.gear/patches/: sdl2-examples-1.0-java-makefile.patch
.gear/tags/: list
.github/workflows/: ada.yml  assembly.yml  c.yml  cplusplus.yml  expired.yml  main.yml  other.yml
ada/: Makefile  README.md  alire.toml  main.adb  main.gpr
ada/src/: main.adb
asm-x86_64-linux/: Makefile  main.asm
assembly/: Makefile  README.md
assembly-linux-x86_32/: Makefile
assembly-linux-x86_64/: Makefile
assembly/linux-i386/: Makefile  README.md  main.asm
assembly/linux-x86_32/: Makefile  main.asm
assembly/linux-x86_64/: main.asm
assembly/macos-x86_64/: Makefile  README.md  main.asm
assembly/windows-x86_64/: README.md  main.asm
c/: Makefile  README  README.md  main.c
c++/: Makefile  README  README.md  main.cpp
c++11/: Makefile  main.cpp
c++11-cmake/: CMakeLists.txt  README  README.md  main.cpp
c++14-cmake/: CMakeLists.txt  README.md  main.cpp
c++17-cmake/: CMakeLists.txt  README.md  main.cpp
c++17-cxx/: README.md  main.cpp
c++17-sakemake/: README.md  main.cpp
c++20-cmake/: CMakeLists.txt  README.md
c++20-cxx/: README.md
c++23-cmake/: CMakeLists.txt  README.md
c++98/: Makefile  README.md  main.cpp
c11/: Makefile  README.md  main.c
c18/: Makefile  README.md  main.c
c2x/: Makefile  README.md  main.c
c3/: main.c3
c89/: Makefile  README.md  main.c
c99/: Makefile  main.c
cpp/: main.cpp
crystal/: Makefile  README.md  checkout.sh  main.cr  shard.yml
crystal/lib/: .shards.info
crystal/lib/sdl/: .gitignore  README.md  shard.yml
crystal/lib/sdl/samples/: 04_keyboard.cr  05_stretching.cr  06_image.cr  07_texture.cr  08_geometry.cr  09_viewport.cr  10_colorkey.cr  11_sprites.cr  12_color_modulation.cr  13_alpha_blending.cr  14_animated_sprites_and_vsync.cr  15_rotation_and_flipping.cr  16_ttf.cr  21_sound_and_effects.cr  README.md  basic.cr  bmp.cr
crystal/lib/sdl/src/: color.cr  events.cr  hint.cr  image.cr  lib_img.cr  lib_mix.cr  lib_sdl.cr  lib_ttf.cr  mix.cr  pixels.cr  rect.cr  renderer.cr  rwops.cr  screensaver.cr  sdl.cr  surface.cr  texture.cr  ttf.cr  window.cr
crystal/lib/sdl/src/lib_sdl/: audio.cr  blend_mode.cr  clipboard.cr  error.cr  events.cr  gamecontroller.cr  gesture.cr  hints.cr  joystick.cr  keyboard.cr  keycode.cr  main.cr  messagebox.cr  mouse.cr  pixels.cr  power.cr  rect.cr  render.cr  rwops.cr  scancode.cr  shape.cr  surface.cr  touch.cr  video.cr
crystal/lib/sdl/src/mix/: channel.cr  music.cr  sample.cr
crystal/src/: main.cr
csharp/: Makefile  README.md  main.cs  main.csproj  run.sh
d/: .gitignore  Makefile  README.md  dub.json  dub.selections.json
d/source/: app.d
dart/: Makefile  main.dart  pubspec.yaml
fpc/: Makefile  README  checkout.sh  main.pas
fpc/SDL2/: SDL2.pas  SDL2_image.pas  SDL2_mixer.pas  SDL2_net.pas  SDL2_ttf.pas
freebasic/: Makefile  README.md  main.bas
fsharp/: Makefile  main.fs  main.fsproj
gambas/: .directory  .gitignore  .project  Makefile  main.bas
gambas/.src/: MMain.module
gccgo/: Makefile  README  README.md  go.mod  go.sum  main.go
go/: Makefile  README  README.md  go.mod  go.sum  main.go  requirements.txt
haskell/: Makefile  README.md  grumpycat.cabal  package.yaml  stack.yaml
haskell/app/: Main.hs
haskell/src/: Lib.hs
include/: sdl2.h
java/: CMakeLists.txt  Main.java  main.cpp
java22/: Main.java  Makefile  Makefile.orig  README.md
kotlin/: Main.kt  Makefile  README.md  main.kt  sdl2.def
lisp/: Makefile  README.md  main.lisp
lua/: Makefile  README.md  main.lua
mruby/: HOWTO  Makefile  README  README.md  main.rb
nim/: Makefile  README  README.md  main.nim
nimrod/: Makefile  README  main.nim
objc-cmake/: CMakeLists.txt  README.md  main.m
objectpascal/: Makefile  README.md  checkout.sh
ocaml/: .gitignore  Makefile  README  README.md  checkout.sh  clone.sh  main.ml
ocaml-tsdl/: Makefile  README.md  main.ml
odin/: Makefile  README.md  main.odin
pony/: .gitignore  Makefile  main.pony
python/: Makefile  README  README.md  main.py
ring/: Makefile  README.md  main.ring
rust/: .travis.yml  Cargo.toml  Makefile  README  README.md  checkout.sh  main.rs
rust-cargo/: Cargo.toml  README
rust-cargo/src/: main.rs
rust/src/: main.rs
scala/: Main.scala  Makefile  README.md  build.sbt
scala/project/: plugins.sbt
scalanative/: Makefile  build.sbt
tests/ubuntu/: Dockerfile  interactive.sh  run.sh
v/: Makefile  README.md  main.v
zig/: Makefile  README.md  build.zig  main.zig
